--- a/zyltech s6/input_shaper_adxl345.cfg
+++ b/zyltech s6/input_shaper_adxl345.cfg
@@ -4,8 +4,8 @@
 #####################################################################
 
 [input_shaper]
-#shaper_freq_x: 60.6
-#shaper_type_x: mzv
+#shaper_freq_x: 57.2
+#shaper_type_x: ei
 #shaper_freq_y: 41.0
 #shaper_type_y: ei
 
@@ -15,4 +15,4 @@ cs_pin: rpi:None
 [resonance_tester]
 accel_chip: adxl345
 probe_points: 150, 150, 20  # an example
-max_smoothing: 0.192  # an example
+max_smoothing: 0.1  # an example
