--- a/zyltech s6/printer.cfg
+++ b/zyltech s6/printer.cfg
@@ -1,51 +1,17 @@
 [include mainsail.cfg]
+[include mcus.cfg]
 [include steppers.cfg]
+[include extruder.cfg]
 [include macros.cfg]
-[include bed_and_probe.cfg]
+[include bed.cfg]
+[include probe.cfg]
 [include fans.cfg]
 [include print_area_bed_mesh.cfg]
+[include kinematics.cfg]
+[include temperature_sensors.cfg]
+[include input_shaper_adxl345.cfg]
 [exclude_object]
 #[include PIS.cfg]
-
-[mcu]
-serial: /dev/serial/by-id/usb-Klipper_stm32f446xx_10000C000C50563046363120-if00
-restart_method: command
-
-[mcu rpi]
-serial: /tmp/klipper_host_mcu
-
-[printer]
-kinematics: cartesian
-max_velocity: 350
-max_accel: 5500
-max_accel_to_decel: 2750
-max_z_velocity: 50
-max_z_accel: 100
-square_corner_velocity: 5
-
-[input_shaper]
-#shaper_freq_x: 60.6
-#shaper_type_x: mzv
-#shaper_freq_y: 41.0
-#shaper_type_y: ei
-
-[adxl345]
-cs_pin: rpi:None
-
-[resonance_tester]
-accel_chip: adxl345
-probe_points: 150, 150, 20  # an example
-max_smoothing: 0.192  # an example
-
-[temperature_sensor raspberry_pi]
-sensor_type: temperature_host
-min_temp: 10
-max_temp: 100
-
-[temperature_sensor FYSETC_S6]  #[temperature_sensor mcu_temp]
-sensor_type: temperature_mcu
-min_temp: 0
-max_temp: 100
 
 #[filament_switch_sensor my_sensor]
 #pause_on_runout: False
@@ -58,9 +24,9 @@ max_temp: 100
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 15.066
-#*# pid_ki = 0.652
-#*# pid_kd = 87.009
+#*# pid_kp = 17.381
+#*# pid_ki = 0.966
+#*# pid_kd = 78.215
 #*#
 #*# [heater_bed]
 #*# control = pid
@@ -69,29 +35,37 @@ max_temp: 100
 #*# pid_kd = 1441.944
 #*#
 #*# [input_shaper]
-#*# shaper_type_x = mzv
-#*# shaper_freq_x = 60.6
+#*# shaper_type_x = ei
+#*# shaper_freq_x = 57.2
 #*# shaper_type_y = ei
 #*# shaper_freq_y = 41.0
 #*#
 #*# [probe]
-#*# z_offset = 1.115
+#*# z_offset = 0.989
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.056558, 0.045308, 0.059058, 0.082808, 0.096558
-#*# 	  0.045308, 0.054058, 0.066558, 0.070308, 0.085308
-#*# 	  0.042808, 0.059058, 0.071558, 0.066558, 0.067808
-#*# 	  0.049058, 0.061558, 0.086558, 0.072808, 0.054058
-#*# 	  0.047808, 0.072808, 0.077808, 0.079058, 0.067808
+#*# 	  0.021719, 0.017969, 0.024219, 0.020469, 0.006719, 0.011719, 0.036719, 0.042969, 0.035469, 0.042969, 0.034219, 0.001719, 0.029219
+#*# 	  -0.005781, 0.000469, 0.005469, 0.002969, -0.000781, 0.019219, 0.047969, 0.055469, 0.027969, 0.040469, 0.044219, 0.024219, 0.005469
+#*# 	  -0.019531, -0.029531, 0.009219, 0.009219, -0.009531, 0.010469, 0.032969, 0.032969, 0.037969, 0.042969, 0.057969, -0.010781, -0.008281
+#*# 	  -0.059531, -0.044531, -0.037031, -0.025781, -0.030781, -0.028281, -0.012031, 0.004219, 0.001719, 0.005469, 0.012969, -0.023281, -0.020781
+#*# 	  -0.042031, -0.035781, -0.037031, -0.035781, -0.047031, -0.030781, -0.005781, -0.015781, -0.014531, -0.000781, -0.009531, -0.052031, -0.030781
+#*# 	  -0.065781, -0.054531, -0.040781, -0.045781, -0.049531, -0.035781, -0.017031, -0.012031, -0.022031, -0.002031, -0.010781, -0.028281, -0.033281
+#*# 	  -0.069531, -0.069531, -0.057031, -0.048281, -0.068281, -0.049531, -0.030781, -0.033281, -0.054531, -0.032031, -0.052031, -0.073281, -0.069531
+#*# 	  -0.093281, -0.099531, -0.078281, -0.062031, -0.044531, -0.034531, -0.023281, -0.025781, -0.038281, -0.038281, -0.044531, -0.069531, -0.074531
+#*# 	  -0.084531, -0.088281, -0.072031, -0.064531, -0.043281, -0.040781, -0.025781, -0.039531, -0.053281, -0.039531, -0.052031, -0.062031, -0.085781
+#*# 	  -0.059531, -0.077031, -0.065781, -0.027031, -0.047031, -0.028281, -0.002031, 0.004219, -0.009531, -0.018281, -0.032031, -0.070781, -0.057031
+#*# 	  -0.072031, -0.072031, -0.037031, -0.043281, -0.049531, -0.038281, -0.013281, -0.023281, -0.038281, -0.042031, -0.038281, -0.063281, -0.074531
+#*# 	  -0.065781, -0.070781, -0.065781, -0.064531, -0.078281, -0.048281, -0.003281, -0.019531, -0.029531, -0.024531, -0.034531, -0.068281, -0.085781
+#*# 	  -0.057031, -0.063281, -0.045781, -0.033281, -0.048281, -0.027031, 0.002969, -0.015781, -0.032031, -0.040781, -0.039531, -0.073281, -0.070781
 #*# tension = 0.1
-#*# min_x = 88.57
+#*# min_x = 54.94
 #*# algo = bicubic
-#*# y_count = 5
+#*# y_count = 13
 #*# mesh_y_pps = 2
-#*# min_y = 90.91
-#*# x_count = 5
-#*# max_y = 187.76
+#*# min_y = 48.27
+#*# x_count = 13
+#*# max_y = 239.79
 #*# mesh_x_pps = 2
-#*# max_x = 218.41
+#*# max_x = 251.98
