--- a/zyltech s6/bed.cfg
+++ b/zyltech s6/bed.cfg
@@ -16,25 +16,25 @@ min_temp: 0
 max_temp: 80
 
 [bed_screws] 4 corners
-screw1: 34,34
+screw1: 29,39 #34,34
 screw1_name: front left
-screw2: 273,34
+screw2: 270,39 #273,34
 screw2_name: front right 
-screw3: 273,277
+screw3: 270,277 #273,277
 screw3_name: back right 
-screw4: 34,277
+screw4: 29,277 #34,277
 screw4_name: back left
 speed: 350 #235
 
 [screws_tilt_adjust] 4 corners 
 #left bltouch #front right mount h2 bltouch
-screw1: 53, 29 #70, 36 #-12, 62
+screw1: 53, 39 #70, 36 #-12, 62
 screw1_name: front left screw
-screw2: 293, 29 #309, 36 #227, 62
+screw2: 293, 39 #309, 36 #227, 62
 screw2_name: front right screw
-screw3: 293, 269 #309, 281 #227, 282.5
+screw3: 293, 278 #309, 281 #227, 282.5
 screw3_name: rear right screw
-screw4: 53, 269 #70, 281 #-12, 282.5
+screw4: 53, 278 #70, 281 #-12, 282.5
 screw4_name: rear left screw
 horizontal_move_z: 6 #10
 speed: 350 #235
