--- a/zyltech s6/steppers.cfg
+++ b/zyltech s6/steppers.cfg
@@ -10,8 +10,8 @@ enable_pin: !PE9
 microsteps: 16 
 rotation_distance: 20
 endstop_pin: tmc2209_stepper_x:virtual_endstop 
-position_endstop: -34
-position_min: -34
+position_endstop: -24
+position_min: -24
 position_max: 303
 homing_speed: 30 #25 
 homing_retract_dist: 0
@@ -32,8 +32,8 @@ enable_pin: !PD9
 microsteps: 16 
 rotation_distance: 20
 endstop_pin: tmc2209_stepper_y:virtual_endstop
-position_endstop: -15
-position_min: -15
+position_endstop: -22 #-15
+position_min: -22 #-15
 position_max: 283
 homing_speed: 25 
 homing_retract_dist: 0
