--- a/zyltech s6/print_area_bed_mesh.cfg
+++ b/zyltech s6/print_area_bed_mesh.cfg
@@ -28,6 +28,7 @@ gcode:
     {% endif %}
 
     {% set klicky_available = printer['gcode_macro _Probe_Variables'] != null %}
+    {% set euclid_available = printer['gcode_macro EuclidProbe'] != null %}; Requires v5 macros https://github.com/nionio6915/Euclid_Probe/blob/main/Firmware_Examples/Klipper/00-euclid_exampleV5.cfg
     {% if params.PRINT_MIN %}
         { action_respond_info("print_min: %s" % params.PRINT_MIN) }
         { action_respond_info("print_max: %s" % params.PRINT_MAX) }
@@ -57,6 +58,8 @@ gcode:
             {% if klicky_available %}
                 _CheckProbe action=query
                 Attach_Probe
+            {% elif euclid_available %}
+                DEPLOY_PROBE
             {% endif %}
             {% if (print_min_x < print_max_x) and (print_min_y < print_max_y) %}
 
@@ -134,6 +137,8 @@ gcode:
             {% endif %}
             {% if klicky_available %}
                 Dock_Probe
+            {% elif euclid_available %}
+                STOW_PROBE
             {% endif %}
         {% else %}
             { action_respond_info("No need to recreate Bed Mesh since it's same as current mesh or smaller") }
@@ -142,6 +147,8 @@ gcode:
         {% if klicky_available %}
             _CheckProbe action=query
             Attach_Probe
+        {% elif euclid_available %}
+            STOW_PROBE
         {% endif %}
         {% if printer["gcode_macro status_meshing"] != null %}
             status_meshing
@@ -149,6 +156,9 @@ gcode:
         _BED_MESH_CALIBRATE
         {% if klicky_available %}
             Dock_Probe
+        {% endif %}
+        {% if euclid_available %}
+            STOW_PROBE
         {% endif %}
     {% endif %}
     {% if printer["gcode_macro status_ready"] != null %}
