--- a/zyltech s6/extruder.cfg
+++ b/zyltech s6/extruder.cfg
@@ -24,6 +24,9 @@ max_temp: 275
 min_extrude_temp: 185
 pressure_advance: 0.032  #0.06125
 pressure_advance_smooth_time: 0.040
+max_extrude_only_distance: 200.0
+max_extrude_only_velocity: 60
+max_extrude_cross_section: 50.0
 
 [tmc2209 extruder]
 uart_pin: PA15
