--- a/zyltech s6/probe.cfg
+++ b/zyltech s6/probe.cfg
@@ -19,17 +19,17 @@ samples_tolerance_retries: 8
 #black > signal
 
 [safe_z_home]
-home_xy_position: 150,150		# Change coordinates to the center of your print bed
+home_xy_position: 175, 160 #150,150		# Change coordinates to the center of your print bed
 speed: 350 #200 #145 #110 #80 #45
 z_hop: 7				# Move up 10mm
 z_hop_speed: 6 #5
 
 [bed_mesh]
-speed: 350 #400 #350 #335 #315 #285 #265 #240 
+speed: 250 #400 #350 #335 #315 #285 #265 #240 
 horizontal_move_z: 3
 mesh_min: 25, 20 #6, 6
 mesh_max: 275, 265 #273, 282
-probe_count:13,13 #11,11
+probe_count:9,9 #13,13 #11,11
 algorithm: bicubic
 bicubic_tension:0.1
 fade_start: 1.0
@@ -42,7 +42,7 @@ z_positions:
 points: 
  53, 150  #71, 150  #-27,150
  294, 150 #308, 150  #245,150    
-speed: 350 #335 #315 #285 #265 #235
+speed: 250 #335 #315 #285 #265 #235
 horizontal_move_z: 6 #15
 retries: 15
 retry_tolerance: 0.015
