--- a/zyltech s6/Adaptive_Purge.cfg
+++ b/zyltech s6/Adaptive_Purge.cfg
@@ -18,8 +18,8 @@ variable_flow_rate: 10              # Desired flow rate in mm3/s
 variable_x_default: 10              # X location to purge, overwritten if adaptive is True
 variable_y_default: 10              # Y location to purge, overwritten if adaptive is True
 variable_size: 10                   # Size of the logo
-variable_distance_to_object_x: 15   # Distance in x to the print area
-variable_distance_to_object_y: 0    # Distance in y to the print area
+variable_distance_to_object_x: 30   # Distance in x to the print area
+variable_distance_to_object_y: 30    # Distance in y to the print area
 variable_travel_speed: 200          # Travel speed
 
 gcode:
@@ -59,4 +59,4 @@ gcode:
     G1 X{x_origin+size} Y{y_origin+size/2}  E{purge_amount/4} F{purge_move_speed*60}    # Purge third line of logo
     G1 E-.5 F2100                                                                       # Retract
     G92 E0                                                                              # Reset extruder distance
-    G0 Z{z_height*2}                                                                    # Z hop
+    G0 Z{z_height*5}                                                                    # Z hop  2
