--- a/zyltech s6/moonraker.conf
+++ b/zyltech s6/moonraker.conf
@@ -28,7 +28,7 @@ enable_object_processing: True
 [history]
 
 [update_manager]
-channel: dev
+channel: beta
 refresh_interval: 168
 
 [update_manager mainsail]
