--- a/zyltech s6/temperature_sensors.cfg
+++ b/zyltech s6/temperature_sensors.cfg
@@ -12,3 +12,10 @@ max_temp: 100
 sensor_type: temperature_mcu
 min_temp: 0
 max_temp: 100
+
+[temperature_sensor inside_the_TENT] 
+sensor_type: BME280
+i2c_address: 119
+i2c_mcu: rpi
+i2c_bus: i2c.1
+i2c_speed: 100000
