--- a/zyltech s6/changed sensorless home settings/probe.cfg
+++ b/zyltech s6/changed sensorless home settings/probe.cfg
@@ -18,11 +18,11 @@ samples_tolerance_retries: 8
 #blue > GND 
 #black > signal
 
-[safe_z_home]
-home_xy_position: 175, 160 #150,150		# Change coordinates to the center of your print bed
-speed: 350 #200 #145 #110 #80 #45
-z_hop: 7				# Move up 10mm
-z_hop_speed: 6 #5
+#[safe_z_home]
+#home_xy_position: 175, 160 #150,150		# Change coordinates to the center of your print bed
+#speed: 350 #200 #145 #110 #80 #45
+#z_hop: 7				# Move up 10mm
+#z_hop_speed: 6 #5
 
 [bed_mesh]
 speed: 250 #400 #350 #335 #315 #285 #265 #240 
