--- a/zyltech s6/changed sensorless home settings/printer.cfg
+++ b/zyltech s6/changed sensorless home settings/printer.cfg
@@ -14,6 +14,7 @@
 [include Adaptive_Mesh.cfg]
 [include g32.cfg]
 [exclude_object]
+[include sensorless.cfg]
 #[include PIS.cfg]
 
 #[filament_switch_sensor my_sensor]
